--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
   <script src="script.js"></script>
 
   <footer class="footer">
-    Created by <a href="https://github.com/CrescendoFluffy/" target="_blank" rel="noopener">CrescendoFluffy</a>
+    <div class="footer-credit">
+      Created by <a href="https://github.com/CrescendoFluffy/" target="_blank" rel="noopener">CrescendoFluffy</a>
+    </div>
+    <div class="footer-link">
+      Also try 👉 <a href="https://zoneconverter.netlify.app/" target="_blank" rel="noopener">ZoneConverter</a>
+    </div>
   </footer>
+
 </body>
 
 </html>
